--- a/console_client/CMakeLists.txt
+++ b/console_client/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.12)
 
-set(PROJECT_NAME "test_mongodb")
-set(CMAKE_CXX_STANDARD 20)
+set(PROJECT_NAME "words_learning_console_client")
+set(CMAKE_CXX_STANDARD 17)
 
 project(${PROJECT_NAME})
 
