Add request handler

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.12)
 
+add_compile_definitions(DEBUG)
+
 set(PROJECT_NAME "words_learning_server")
 set(TESTS_NAME "tests_server")
 set(CMAKE_CXX_STANDARD 17)
